--- a/profkat-sample-webapp/pom.xml
+++ b/profkat-sample-webapp/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-	<artifactId>mycore-parent</artifactId>
-	<groupId>org.mycore</groupId>
-    <version>25</version>
-  </parent>
+	<parent>
+		<groupId>org.mycore</groupId>
+		<artifactId>mycore</artifactId>
+		<version>2015.05.0.1-SNAPSHOT</version>
+	</parent>
+
   <artifactId>profkat-sample-webapp</artifactId>
   <name>Sample for Professorenkatalog</name>
   <description>Sample of a professorenkatalog</description>
-  <version>2015.05.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
   <properties>
@@ -59,7 +59,6 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <type>jar</type>
       <scope>test</scope>
       <optional>false</optional>
@@ -79,7 +78,6 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>3.0.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -93,13 +91,11 @@
     <dependency>
       <groupId>xalan</groupId>
       <artifactId>xalan</artifactId>
-      <version>2.7.2</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
-      <version>2.11.0</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
@@ -166,16 +162,6 @@
                 <exclude>web.xml</exclude>
                 <exclude>*.template</exclude>
                 <exclude>datamodel-*.xml</exclude>
-              </excludes>
-            </resource>
-            <resource>
-              <directory>src/main/config/lang</directory>
-              <targetPath>WEB-INF/classes</targetPath>
-              <includes>
-                <include>*.*</include>
-              </includes>
-              <excludes>
-                <exclude>*.template</exclude>
               </excludes>
             </resource>
             <resource>
