--- a/profkat-sample-webapp/pom.xml
+++ b/profkat-sample-webapp/pom.xml
@@ -16,6 +16,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <mcr.finalName>profkat-sample</mcr.finalName>
   </properties>
+  
   <pluginRepositories>
     <pluginRepository>
       <id>MyCoRe HQ</id>
@@ -108,6 +109,7 @@
     </dependency>
   </dependencies>
   <build>
+  	<finalName>${mcr.finalName}</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
